--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ body {
   border-radius: 20px;
 }
 .hero {
-  background-image: url(/Robot.jpg);
+  background-image: url(/project/Robot.jpg);
   background-size: 100%;
   height: 100vh;
   align-items: center;
@@ -33,10 +33,34 @@ body {
 }
 .Robotic {
   display: flex;
-  justify-content: space-around;
+  align-items: center;
+  justify-content: space-between;
 }
 
-.Ai {
+.machine {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  margin-left: 75px;
+}
+
+.stars {
+  display: flex;
+  flex-direction: row-reverse;
+  align-items: flex-start;
+  justify-content: center;
+  margin-right: 75px;
+}
+
+.future {
+  margin-top: 150px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-left: 100px;
+}
+
+.machine .Ai {
   font-size: 16px;
   color: darkorange;
   font-weight: bold;
@@ -59,7 +83,9 @@ body {
   padding: 10px 10px;
   border-radius: 20px;
 }
+
 .ai-text {
+  display: inline-flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
@@ -74,7 +100,4 @@ body {
 
 .space {
   height: 20px;
-}
-.future {
-  display: flex;
 }
