--- a/style.css
+++ b/style.css
@@ -127,7 +127,6 @@ body {
 
 .whoarewe {
   color: #ff7000;
-  font-size: 30px;
 }
 
 .lorem-ipsum {
@@ -136,4 +135,29 @@ body {
   font-size: 15px;
   color: #ffffffe5;
   justify-content: space-between;
+  margin-bottom: 50px;
+}
+
+.robot-technology-section {
+  display: flex;
+  gap: 25px;
+  color: #fff;
+}
+
+.robot-technology-image-container {
+  margin-bottom: 25px;
+}
+
+.title {
+  color: #ff7000;
+}
+
+.robot-technology-heading {
+  font-size: 40px;
+  margin-top: 25px;
+  margin-bottom: 25px;
+}
+
+.robot-technology-description {
+  font-size: 30px;
 }
