--- a/style.css
+++ b/style.css
@@ -103,9 +103,13 @@ body {
 }
 
 .area {
-  padding: 200px;
-  margin-top: -250px;
+  padding: 50px 300px;
 }
+
+.box {
+  border: solid 10px #06071b;
+}
+
 .description {
   display: flex;
   flex-direction: column;
@@ -160,4 +164,18 @@ body {
 
 .robot-technology-description {
   font-size: 30px;
+}
+
+.partnet-title {
+  display: flex;
+  justify-content: center;
+  color: #fff;
+  font-size: 35px;
+}
+
+.company {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 25px;
 }
