--- a/style.css
+++ b/style.css
@@ -179,3 +179,21 @@ body {
   align-items: center;
   padding: 25px;
 }
+
+
+.border {
+  position: absolute;
+}
+
+.event {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: flex-start;
+}
+
+.text-border {
+  display: flex;
+  color: #ffffff;
+  font-size: 20px;
+}
+
