--- a/style.css
+++ b/style.css
@@ -1,199 +1,15 @@
 body {
   background-color: #06071b;
 }
-.nav {
+
+.position {
+  position: absolute;
+}
+
+.flex {
   display: flex;
-  justify-content: space-around;
-  align-items: center;
-  padding: 22px 120px 22px 120px;
-  background-color: #06071b;
-  font-size: 25px;
-}
-
-.nav-list {
-  display: flex;
-}
-
-.nav-item {
-  margin: 0 10px;
-  padding: 10px 20px;
-}
-
-.login {
-  background-color: darkorange;
-  padding: 10px 20px;
-  border-radius: 20px;
-}
-.hero {
-  background-image: url(/project/Robot.jpg);
-  background-size: 100%;
-  height: 100vh;
-  align-items: center;
-  justify-content: center;
-}
-.Robotic {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-
-.machine {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  margin-left: 75px;
-}
-
-.stars {
-  display: flex;
-  flex-direction: row-reverse;
-  align-items: flex-start;
-  justify-content: center;
-  margin-right: 75px;
-}
-
-.future {
-  margin-top: 150px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  margin-left: 100px;
-}
-
-.machine .Ai {
-  font-size: 16px;
-  color: darkorange;
-  font-weight: bold;
-  margin-bottom: 30px;
-}
-
-.text-container h2 {
-  font-size: 72px;
-  color: #fff;
-  font-weight: bold;
-  margin-bottom: 100px;
-}
-
-.demo {
-  font-size: 25px;
-  font-weight: bold;
-  margin-top: 30px;
-  cursor: pointer;
-  background-color: darkorange;
-  padding: 10px 10px;
-  border-radius: 20px;
-}
-
-.ai-text {
-  margin-top: 100px;
-  display: inline-flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-
-.letter {
-  font-size: 25px;
-  color: #fff;
-  text-transform: uppercase;
-}
-
-.space {
-  height: 25px;
 }
 
 .area {
   padding: 50px 300px;
 }
-
-.box {
-  border: solid 10px #06071b;
-}
-
-.description {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  background-color: #06071b;
-  gap: 25px;
-}
-
-.description span {
-  font-size: 30px;
-  color: rgba(255, 255, 255, 0.9);
-}
-
-.lorem {
-  font-size: 22px;
-  color: #fff;
-  margin-bottom: 25px;
-}
-
-.whoarewe {
-  color: #ff7000;
-}
-
-.lorem-ipsum {
-  display: flex;
-  background-color: #06071b;
-  font-size: 15px;
-  color: #ffffffe5;
-  justify-content: space-between;
-  margin-bottom: 50px;
-}
-
-.robot-technology-section {
-  display: flex;
-  gap: 25px;
-  color: #fff;
-}
-
-.robot-technology-image-container {
-  margin-bottom: 25px;
-}
-
-.title {
-  color: #ff7000;
-}
-
-.robot-technology-heading {
-  font-size: 40px;
-  margin-top: 25px;
-  margin-bottom: 25px;
-}
-
-.robot-technology-description {
-  font-size: 30px;
-}
-
-.partnet-title {
-  display: flex;
-  justify-content: center;
-  color: #fff;
-  font-size: 35px;
-}
-
-.company {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 25px;
-}
-
-
-.border {
-  position: absolute;
-}
-
-.event {
-  display: flex;
-  justify-content: space-evenly;
-  align-items: flex-start;
-}
-
-.text-border {
-  display: flex;
-  color: #ffffff;
-  font-size: 20px;
-}
-
