--- a/style.css
+++ b/style.css
@@ -10,6 +10,20 @@ body {
   display: flex;
 }
 
+.flex-row {
+  display: flex;
+  flex-direction: row;
+}
+
+.flex-collum {
+  display: flex;
+  flex-direction: column;
+}
+
 .area {
   padding: 50px 300px;
+}
+
+.relative {
+  position: relative;
 }
