--- a/fifthSection.css
+++ b/fifthSection.css
@@ -1,13 +1,19 @@
-question-title {
+.question-title {
   color: #fff;
   align-items: center;
 }
 
 .question-header {
-  font-size: 48px;
+  font-size: 42px;
   margin-bottom: 25px;
 }
 
 .second-question-header {
   font-size: 32px;
+}
+
+.faq {
+  color: #fff;
+  font-size: 28px;
+  line-height: 42px;
 }
