--- a/style.css
+++ b/style.css
@@ -20,6 +20,11 @@ body {
   flex-direction: column;
 }
 
+.flex-centre {
+  display: flex;
+  justify-content: center;
+}
+
 .area {
   padding: 50px 300px;
 }
