--- a/thidsection.css
+++ b/thidsection.css
@@ -11,9 +11,20 @@
   padding: 25px;
 }
 
-.descritpion-text {
-  color: #ffffff;
-  font-size: 15px;
-  background-color: darkorange;
-  padding-bottom: 30px;
+.partner-title {
+  justify-content: center;
+  color: #fff;
+  font-size: 35px;
+  margin-bottom: 35px;
+  transition: transform 0.3s ease-in-out;
+}
+
+.partner-title:hover {
+  transform: rotate(360deg);
+}
+
+.company {
+  justify-content: space-between;
+  align-items: center;
+  padding: 25px;
 }
