--- a/footer.css
+++ b/footer.css
@@ -4,11 +4,6 @@ footer {
   font-size: 20px;
 }
 
-.container {
-  max-width: 1170px;
-  margin: 0 auto;
-}
-
 .footer-lists {
   display: flex;
   justify-content: space-between;
@@ -38,10 +33,8 @@ footer {
   margin-bottom: 15px;
 }
 
-.subscribe form {
-  display: flex;
-  align-items: center;
-  padding: 20;
+.subscribe {
+  margin-bottom: 25px;
 }
 
 .subscribe input[type="email"] {
