--- a/footer.css
+++ b/footer.css
@@ -34,15 +34,15 @@ footer {
 }
 
 .subscribe {
-  margin-bottom: 25px;
+  background-color: #0e0922;
 }
 
 .subscribe input[type="email"] {
-  width: 100%;
+  width: 35%;
   padding: 10px;
   font-size: 14px;
-  border: none;
   margin-right: 10px;
+  margin-bottom: 15px;
 }
 
 .subscribe button[type="submit"] {
@@ -54,6 +54,13 @@ footer {
   font-size: 14px;
   text-transform: uppercase;
   letter-spacing: 2px;
+  margin-bottom: 15px;
+}
+
+.subscribe-text {
+  font-size: 14px;
+  letter-spacing: 2px;
+  margin-bottom: 15px;
 }
 
 .footer-bottom {
