--- a/firsSection.css
+++ b/firsSection.css
@@ -75,3 +75,49 @@
 .box {
   border: solid 10px #06071b;
 }
+
+media only screen and (max-width: 767px) {
+  .nav {
+    font-size: 20px;
+    padding: 20px;
+  }
+
+  .machine {
+    margin-left: 0;
+  }
+
+  .stars {
+    margin-right: 0;
+  }
+
+  .future {
+    margin-left: 0;
+    text-align: center;
+  }
+
+  .text-container h2 {
+    font-size: 48px;
+  }
+
+  .ai-text {
+    margin-top: 75px;
+  }
+}
+
+@media only screen and (max-width: 575px) {
+  .text-container h2 {
+    font-size: 36px;
+  }
+
+  .demo {
+    font-size: 20px;
+  }
+
+  .letter {
+    font-size: 20px;
+  }
+
+  .space {
+    height: 20px;
+  }
+}
