--- a/Css/firsSection.css
+++ b/Css/firsSection.css
@@ -1,5 +1,5 @@
 .hero {
-  background-image: url(../project/Images/Robot.jpg);
+  background-image: url(../Css/Robot.jpg);
   background-size: 100%;
   height: 100vh;
   align-items: center;
