--- a/Css/firsSection.css
+++ b/Css/firsSection.css
@@ -76,10 +76,68 @@
   border: solid 10px #06071b;
 }
 
+@media (max-width: 1600px) {
+  .stars {
+    margin-right: 0px;
+  }
+  .hero img {
+    width: 80%;
+  }
+  .hero h2 {
+    font-size: 30px;
+  }
+  .ai-text {
+    font-size: 18px;
+  }
+}
 
-@media (max-width: 1190px) {
-  .login,
-  .signup {
-    padding: 0 20px 0px 5px;
+@media (max-width: 1258px) {
+  .stars {
+    margin-right: -50px;
+  }
+  .hero img {
+    width: 40%;
+  }
+  .hero h2 {
+    font-size: 24px;
+  }
+  .ai-text {
+    font-size: 14px;
+  }
+}
+
+@media (max-width: 1134px) {
+  .stars {
+    margin-right: -50px;
+  }
+  .hero img {
+    width: 30%;
+  }
+  .hero h2 {
     font-size: 20px;
   }
+  .ai-text {
+    font-size: 12px;
+  }
+  .demo {
+    font-size: 20px;
+  }
+}
+
+@media (max-width: 734px) {
+  .stars {
+    margin-right: -50px;
+  }
+  .hero img {
+    width: 30%;
+  }
+  .hero h2 {
+    font-size: 20px;
+  }
+  .ai-text {
+    font-size: 12px;
+  }
+  .demo {
+    font-size: 20px;
+  }
+}
