--- a/Css/firsSection.css
+++ b/Css/firsSection.css
@@ -76,7 +76,7 @@
   border: solid 10px #06071b;
 }
 
-@media (max-width: 1600px) {
+@media only screen and (max-width: 1600px) {
   .stars {
     margin-right: 0px;
   }
@@ -94,7 +94,7 @@
   }
 }
 
-@media (max-width: 1400px) {
+@media only screen and (max-width: 1400px) {
   .hero {
     height: auto;
   }
@@ -123,7 +123,7 @@
   }
 }
 
-@media (max-width: 668px) {
+@media only screen and (max-width: 668px) {
   .hero img {
     width: 35%;
   }
@@ -155,7 +155,7 @@
   }
 }
 
-@media (max-width: 617px) {
+@media only screen and (max-width: 617px) {
   .stars {
     display: none;
   }
