--- a/Css/navigation.css
+++ b/Css/navigation.css
@@ -35,7 +35,7 @@
   }
 }
 
-@media (max-width: 1030px) {
+@media only screen and (max-width: 1030px) {
   .login,
   .signup {
     padding: 0 20px 0px 5px;
@@ -47,7 +47,7 @@
   }
 }
 
-@media (max-width: 1029px) {
+@media only screen and (max-width: 1029px) {
   .login,
   .signup {
     padding: 0 10px 0px 5px;
@@ -58,7 +58,7 @@
     font-size: 16px;
   }
 }
-@media (max-width: 946px) {
+@media only screen and (max-width: 946px) {
   .login,
   .signup {
     padding: 0 8px 0px 3px;
@@ -70,7 +70,7 @@
   }
 }
 
-@media (max-width: 900px) {
+@media only screen and (max-width: 900px) {
   .nav {
     display: flex;
     flex-direction: column;
@@ -91,7 +91,7 @@
   }
 }
 
-@media (max-width: 400px) {
+@media only screen and (max-width: 400px) {
   .login,
   .signup {
     padding: 0px;
@@ -111,7 +111,7 @@
   }
 }
 
-@media (max-width: 286px) {
+@media only screen and (max-width: 286px) {
   .login,
   .signup {
     padding: 0px;
