--- a/Css/fourthsection.css
+++ b/Css/fourthsection.css
@@ -31,11 +31,15 @@ p {
   .area {
     padding: 0px 20px;
   }
+  .events-list {
+    margin-bottom: 70px;
+  }
 }
 
 @media only screen and (max-width: 900px) {
   .events-list {
     flex-direction: column;
+    margin-bottom: 70px;
   }
 
   events-area {
