--- a/Css/footer.css
+++ b/Css/footer.css
@@ -83,3 +83,86 @@ footer {
   margin-right: 10px;
   font-size: 18px;
 }
+
+@media only screen and (max-width: 1060px) {
+  .footer-lists h3 {
+    font-size: 16px;
+  }
+  .social-links a {
+    font-size: 16px;
+  }
+  .subscribe-text {
+    font-size: 12px;
+  }
+  .subscribe button {
+    font-size: 12px;
+  }
+  footer {
+    font-size: 18px;
+  }
+  .footer-lists {
+    gap: 25px;
+  }
+}
+
+@media only screen and (max-width: 900px) {
+  .footer-lists h3 {
+    font-size: 10px;
+  }
+  .social-links a {
+    font-size: 10px;
+  }
+  .subscribe-text {
+    font-size: 8px;
+  }
+  .subscribe button {
+    font-size: 8px;
+  }
+  footer {
+    padding: 40px 0;
+    font-size: 16px;
+  }
+  .footer-lists {
+    gap: 25px;
+  }
+
+  .area {
+    padding: 25px 150px;
+  }
+  .subscribe input {
+    padding: 5px;
+    font-size: 10px;
+  }
+}
+@media only screen and (max-width: 601px) {
+  .footer-lists h3 {
+    font-size: 8px;
+  }
+  .social-links a {
+    font-size: 8px;
+  }
+  .subscribe-text {
+    font-size: 6px;
+  }
+  .subscribe button {
+    font-size: 6px;
+  }
+  footer {
+    padding: 40px 0;
+    font-size: 12px;
+  }
+  .footer-lists {
+    gap: 5px;
+  }
+
+  .area {
+    padding: 25px 100px;
+  }
+  .subscribe input {
+    padding: 5px;
+    font-size: 10px;
+  }
+}
+
+@media only screen and (max-width: 500px) {
+}
